--- a/src/features/ui/Range/RangeSlider.module.scss
+++ b/src/features/ui/Range/RangeSlider.module.scss
@@ -7,7 +7,9 @@ $colorThemeSecondaryColor: $grayishPink;
 .wrapper {
  position: relative;
   border: 1px solid #e52376;
+  height: 50px;
   input{
+
     width: 100%;
     -webkit-appearance: none;
     height: 7px;
@@ -48,12 +50,22 @@ $colorThemeSecondaryColor: $grayishPink;
       left 350ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
       bottom 350ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
     }
+    &::after{
+      content: attr(data-value);
+      width: 50px;
+      height: 50px;
+      position: absolute;
+      top: 28px;
+      right: -17px;
+      font-size: 16px;
+      font-weight: 600;
+    }
   }
-  span{
-    font-weight: 600;
-    font-size: 16px;
-    font-family: "Droid Sans", sans-serif;
-  }
+  //span{
+  //  font-weight: 600;
+  //  font-size: 16px;
+  //  font-family: "Droid Sans", sans-serif;
+  //}
 
 }
 
