--- a/src/features/ui/Range/SuperDoubleRange.module.scss
+++ b/src/features/ui/Range/SuperDoubleRange.module.scss
@@ -4,8 +4,9 @@
   //display: inline-flex;
   //align-items: center;
   //justify-content: center;
-  width: 300px;
+  width: 100%;
   height: 60px;
+  padding-top: 5px;
 
   span {
     position: absolute;
@@ -127,7 +128,7 @@
 .thumb.dark::-webkit-slider-thumb {
   background-color: #696b6c;
   /*box-shadow: rgba(44, 187, 99, .2) 0 -25px 18px -14px inset, rgba(44, 187, 99, .15) 0 1px 2px, rgba(44, 187, 99, .15) 0 2px 4px, rgba(44, 187, 99, .15) 0 4px 8px, rgba(44, 187, 99, .15) 0 8px 16px, rgba(44, 187, 99, .15) 0 16px 32px;*/
-  box-shadow: rgb(34, 211, 27) 0px 3px 8px;
+  box-shadow: rgb(34, 211, 27) 0 3px 8px;
 
 }
 
