--- a/src/pages/ComponentsTest/ComponentsTest.module.scss
+++ b/src/pages/ComponentsTest/ComponentsTest.module.scss
@@ -31,6 +31,6 @@
   border: 1px solid #e52376;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   row-gap: 20px;
 }
