--- a/src/features/ui/Select/SelectBox.module.scss
+++ b/src/features/ui/Select/SelectBox.module.scss
@@ -21,7 +21,7 @@ $menuButtonHoverTextColor: #f1e8e6;
   //flex-direction: column;
   //padding-left: 10px;
   //padding-right: 10px;
-  width: 300px;
+  width: 100%;
   //z-index: 1000;
   //height: 10px;
 
@@ -66,7 +66,7 @@ $menuButtonHoverTextColor: #f1e8e6;
       color: $arrowIconColor;
       //background-color: rgba(255, 255, 255, 0.1);
       cursor: pointer;
-      transition: transform 0.3s ease-in;
+      transition: all 0.3s ease-in, color 0.1s linear;
 
 
     }
