--- a/src/features/ui/Select/DropdownSelect.module.scss
+++ b/src/features/ui/Select/DropdownSelect.module.scss
@@ -13,6 +13,8 @@ $buttonHoverTextColor: #f1e8e6;
 $optionHoverTextColor: #f1e8e6;
 $menuButtonHoverTextColor: #f1e8e6;
 
+$collapsedHeight: 40px;
+
 .wrapper {
   box-sizing: border-box;
   //border: 3px solid;
@@ -37,7 +39,7 @@ $menuButtonHoverTextColor: #f1e8e6;
     position: relative;
     text-align: left;
     padding-left: 20px;
-    height: 40px;
+    height: $collapsedHeight;
     background-color: $menuButtonColor;
     width: 100%;
     font-weight: 600;
@@ -92,6 +94,9 @@ $menuButtonHoverTextColor: #f1e8e6;
   }
 
   .optionsBox {
+    position: absolute;
+    top: $collapsedHeight;
+    z-index: 100;
     //border: 1px solid;
     //height: 0;
     overflow: hidden;
