--- a/src/features/ui/Range/RangeFlatDesign.module.scss
+++ b/src/features/ui/Range/RangeFlatDesign.module.scss
@@ -1,23 +1,27 @@
 @import 'src/styles/flat-design-colors';
+
 $thumbColor: $checkMarkColor;
 $trackColor: $elementsColorThemeRed;
 
 .wrapper {
-  width:400px;
-  height:260px;
+  border: 1px solid;
+  width: 400px;
+  height: 45px;
   display: flex;
-position: relative;
+  position: relative;
+
   input {
     -webkit-appearance: none;
     width: 100%;
     height: 15px;
     margin: 10px 50px;
-    background-size: 150px 10px;
+    //background-size: 150px 10px;
     //background: linear-gradient(to right, #9A2720 0%, #9A2720 100%) no-repeat center;
     background: $trackColor no-repeat center;
     //overflow: hidden;
     outline: none;
-    &::after{
+
+    &::after {
       content: attr(data-value);
       width: 50px;
       height: 50px;
@@ -28,10 +32,6 @@ position: relative;
       font-weight: 600;
     }
 
-    &:first-of-type {
-      margin-top: 30px;
-    }
-
     &::-webkit-slider-thumb {
       -webkit-appearance: none;
       width: 20px;
@@ -39,20 +39,21 @@ position: relative;
       background: $thumbColor;
       position: relative;
       z-index: 10;
-      box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.3);
+      //box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.3);
+      //&:after {
+      //  content: "33";
+      //  width: 160px;
+      //  //height: 20px;
+      //  position: absolute;
+      //  //z-index: 100;
+      //  right: 20px;
+      //  top: 5px;
+      //  background: #ff5b32;
+      //  background: linear-gradient(to right, #f088fc 1%, #AC6CFF 70%);
+      //}
     }
 
-    &::-webkit-slider-thumb:after {
-      content: " ";
-      width: 160px;
-      //height: 20px;
-      position: absolute;
-      z-index: 1;
-      right: 20px;
-      top: 5px;
-      background: #ff5b32;
-      background: linear-gradient(to right, #f088fc 1%, #AC6CFF 70%);
-    }
+
   }
 
 
