--- a/src/features/ui/Range/RangeFlatDesign.module.scss
+++ b/src/features/ui/Range/RangeFlatDesign.module.scss
@@ -2,6 +2,7 @@
 
 $thumbColor: $checkMarkColor;
 $trackColor: $elementsColorThemeRed;
+$trackFillColor: $elementsColorDefault;
 
 .wrapper {
   border: 1px solid;
@@ -15,10 +16,9 @@ $trackColor: $elementsColorThemeRed;
     width: 100%;
     height: 15px;
     margin: 10px 50px;
-    //background-size: 150px 10px;
-    //background: linear-gradient(to right, #9A2720 0%, #9A2720 100%) no-repeat center;
-    background: $trackColor no-repeat center;
-    //overflow: hidden;
+    background-color: $trackColor;
+    background-image: linear-gradient($trackFillColor, $trackFillColor);
+    background-repeat: no-repeat;
     outline: none;
 
     &::after {
