--- a/src/features/ui/Checkbox/CheckcoxFlatDesign.module.scss
+++ b/src/features/ui/Checkbox/CheckcoxFlatDesign.module.scss
@@ -1,24 +1,46 @@
 $checkMarkColor: #5E5D58;
 
+@mixin check-mark {
+  position: absolute;
+  left: 0;
+  background-color: white;
+  border-radius: 2px;
+  content: "";
+  transform: translateX(10px) rotate(-45deg);
+  transform-origin: left bottom;
+}
+
 .wrapper {
   input {
-    background: rgba(191, 185, 169, .2);
-    height: 16px;
+    position: relative;
+    height: 20px;
     cursor: pointer;
     border-radius: 3px;
-    width: 16px;
+    width: 20px;
     -moz-appearance: none;
     -webkit-appearance: none;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, .44) inset;
-    -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, .44) inset;
-    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .44) inset;
     vertical-align: middle;
+    margin-right: 10px;
+    background: $checkMarkColor;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, .44);
+    -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, .44);
+    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .44);
+
 
     &:checked {
-      background: $checkMarkColor;
-      box-shadow: 0 1px 2px rgba(0, 0, 0, .44);
-      -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, .44);
-      -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .44);
+      &::before {
+        @include check-mark;
+        top: 50%;
+        height: 50%;
+        width: 3px;
+      }
+
+      &::after {
+        @include check-mark;
+        bottom: 0;
+        height: 3px;
+        width: 100%;
+      }
     }
   }
 
