--- a/src/styles/_flat-design-colors.scss
+++ b/src/styles/_flat-design-colors.scss
@@ -16,5 +16,8 @@ $elementsBackground: rgba(191, 185, 169, .2);
 $checkMarkColor: #5E5D58;
 
 
+$elementError: rgb( 231, 76, 60 );
+$elementErrorBorder: rgb( 192, 57, 43 );
+$backgroundPrimary: #2980b9;
 
 
