--- a/src/features/ui/TextInputField/TextInputFlatDesign.module.scss
+++ b/src/features/ui/TextInputField/TextInputFlatDesign.module.scss
@@ -2,7 +2,9 @@ $placeholderTextColor: #E1DFDFFF;
 $textColor: white;
 
 .wrapper {
-
+  padding: 5px;
+  border: 1px solid;
+position: relative;
   input {
     font-family: 'Josefin Sans', sans-serif;
     font-weight: 700;
@@ -37,6 +39,13 @@ $textColor: white;
     &:-ms-input-placeholder {
       color: $placeholderTextColor;
     }
+  }
+
+  .error{
+    color: red;
+    position: absolute;
+    left: 10px;
+    top: 0;
   }
 
 }
