--- a/src/features/ui/flat-design/DropdownSelect.module.scss
+++ b/src/features/ui/flat-design/DropdownSelect.module.scss
@@ -58,18 +58,18 @@ $collapsedHeight: 50px;
       right: 0;
       top: 0;
       bottom: 0;
-      background-color: $elementsBorderColorDefault;
+      background-color: #2f7796;
       font-size: 26px;
       font-weight: 900;
-      padding-right: 15px;
-      padding-left: 15px;
+      padding-right: 20px;
+      padding-left: 20px;
       display: flex;
       align-items: center;
       border-radius: 0 5px 0 0;
 
-      svg {
-        transition: all 0.5s;
-      }
+      //svg {
+      //  transition: all 0.5s;
+      //}
     }
 
     &:hover {
@@ -78,20 +78,30 @@ $collapsedHeight: 50px;
       text-shadow: 2px 2px 0 rgba(0, 0, 0, .3);
 
       svg {
-        transform: scale(1.1);
+        :global {
+          animation: jump 0.5s infinite;
+        }
       }
     }
   }
 
   .menuExpanded {
-    & span svg {
+    &:hover {
+      svg {
+        animation: none;
+      }
+
+    }
+
+    svg {
       transform: rotateZ(180deg);
     }
   }
 
   .optionsBox {
     position: absolute;
-    top: 65px;
+    top: calc(95%);
+    //bottom: calc(-100%);
     left: 5px;
     z-index: 100;
     overflow: hidden;
@@ -105,6 +115,7 @@ $collapsedHeight: 50px;
     font-size: 16px;
     color: $optionTextColor;
     transition: height 0.3s ease-out;
+    border-radius: 5px;
 
     label {
       position: relative;
@@ -127,4 +138,17 @@ $collapsedHeight: 50px;
   }
 
 
+}
+
+@keyframes:global(jump) {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(5px);
+  }
+  100% {
+    transform: translateY(2px);
+
+  }
 }
