--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,14 @@
 
 .app {
+    /*border: 3px solid #4CDF78;*/
     padding: 0;
+    margin: 0;
+    min-height: 100vh;
+    box-sizing: border-box;
+    background-color: rgba(59,119,180,0.46);
+}
+
+h1, h2, h3 {
     margin: 0;
 }
 
