--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,14 @@ h1, h2, h3 {
     margin: 0;
 }
 
+a {
+    text-decoration: none;
+    font-weight: 700;
+    color: white;
+    font-family: "Josefin Sans", sans-serif;
+    font-size: 18px;
+}
+
 /*@font-face {*/
 /*    font-family: 'Josefin Sans';*/
 /*    !*src: local("JosefinSans"),*!*/
