--- a/src/features/ui/flat-design/DropdownMenu.module.scss
+++ b/src/features/ui/flat-design/DropdownMenu.module.scss
@@ -109,35 +109,47 @@ $collapsedHeight: 50px;
     color: $optionTextColor;
     transition: height 0.3s ease-out;
     border-radius: 5px;
-    list-style: none;
+    //margin: 0;
+    //padding-top: -20px;
+    //text-indent: 0;
+    //list-style: none none;
 
 
     .menuItem {
+      margin: 0;
+      padding: 0;
       width: 100%;
       color: $optionTextColor;
       pointer-events: none;
 
       a {
-        display: inline-block;
+        font-size: 14px;
+        margin: 0;
+        padding: 0 0 0 20px;
+        //border: 1px solid green;
+        //display: inline-block;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
         pointer-events: all;
         cursor: pointer;
         width: 100%;
-        padding: 7px 7px 7px 20px;
+        height: 100%;
         color: $optionTextColor;
-        text-decoration: none;
-        position: relative;
+
         &:hover {
           background-color: $optionHoverColor;
           color: $optionHoverTextColor;
-        }
 
+        }
 
         svg {
+          font-size: 1.3em;
+          //border: 1px solid;
           display: inline-block;
           min-width: 20px;
-          margin-right: 20px;
+          margin: 0 20px 0 0;
         }
-
       }
     }
 
