--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 body {
     margin: 0;
     padding: 0;
+    /*min-height: 100vh;*/
+    /*background-color: #3e8e41;*/
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
