--- a/src/styles/_flat-design-colors.scss
+++ b/src/styles/_flat-design-colors.scss
@@ -1,8 +1,8 @@
 $backgroundColorDefault: #FDA37E;
-$backgroundColorSecondary: #F3EDD3;
+$backgroundColorSecondary: #f7b731;
 
-$elementsColorDefault: #19698C;
-$elementsBorderColorDefault: #384B64;
+$elementsColorDefault: #20bf6b;
+$elementsBorderColorDefault: #17834a;
 
 $elementsColorSecondary: #4CDF78;
 $elementsBorderColorSecondary: #53A574;
@@ -16,8 +16,15 @@ $elementsBackground: rgba(191, 185, 169, .2);
 $checkMarkColor: #5E5D58;
 
 
-$elementError: rgb( 231, 76, 60 );
-$elementErrorBorder: rgb( 192, 57, 43 );
+$elementError: #eb3b5a;
+$elementErrorBorder: #eb3b5a;
 $backgroundPrimary: #2980b9;
+
+$mainColor: #0fb9b1;
+$secondaryColor: #f7b731;
+$accentColor1: #20bf6b;
+$accentColor2: #4b6584;
+$textColorMain: white;
+$textColorInverse: #4b6584;
 
 
