--- a/src/App.css
+++ b/src/App.css
@@ -5,11 +5,23 @@
     margin: 0;
     min-height: 100vh;
     box-sizing: border-box;
-    background-color: rgba(59,119,180,0.46);
+    background-color: rgba(59, 119, 180, 0.46);
 }
 
 h1, h2, h3 {
     margin: 0;
+}
+
+h1 {
+    margin-bottom: 40px;
+}
+
+h2 {
+    margin-bottom: 30px;
+}
+
+h3 {
+    margin-bottom: 20px;
 }
 
 a {
@@ -18,7 +30,31 @@ a {
     color: white;
     font-family: "Josefin Sans", sans-serif;
     font-size: 18px;
+    position: relative;
+
 }
+
+a:hover {
+    text-shadow: 2px 2px 0 rgba(0, 0, 0, .3);
+}
+
+/*a::after {*/
+/*    content: "";*/
+/*    width: max-content;*/
+/*    height: 3px;*/
+/*    background-color: white;*/
+/*    position: absolute;*/
+/*    bottom: 0;*/
+/*    transition: transform 0.2s;*/
+/*    !*left: 50px;*!*/
+/*    transform: scaleX(0);*/
+/*    */
+/*}*/
+
+/*a:hover::after {*/
+/*    transform: scaleX(1);*/
+/*    transition: transform 0.4s;*/
+/*}*/
 
 /*@font-face {*/
 /*    font-family: 'Josefin Sans';*/
@@ -27,3 +63,5 @@ a {
 /*    font-weight: normal;*/
 /*    font-style: normal;*/
 /*}*/
+
+
