--- a/src/pages/Login/Login.module.scss
+++ b/src/pages/Login/Login.module.scss
@@ -1,18 +1,36 @@
-.wrapper{
-  background-color: #f44336;
-  box-sizing: border-box;
-  //height: 100%;
-  width: 100vw;
-  min-height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  .form{
-    background-color: #cccccc;
-    display: flex;
-    flex-direction: column;
-    //height: 600px;
-    width: 400px;
-    padding: 20px;
+@use 'src/styles/layout-variables';
+@use 'src/styles/flat-design-colors';
+@import 'src/styles/flat-design-forms';
+
+.wrapper {
+  @extend .container;
+
+  form {
+    @extend .form;
+
+    h1 {
+
+    }
+
+    p {
+      //font-weight: 700;
+      //font-size: 18px;
+    }
+
+    a {
+
+    }
+
+    label {
+      //font-size: 18px;
+
+    }
+
+    .formBottom {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+    }
   }
 }
