--- a/src/pages/PasswordRecovery/PasswordRecovery.module.scss
+++ b/src/pages/PasswordRecovery/PasswordRecovery.module.scss
@@ -1,21 +1,19 @@
 @use 'src/styles/flat-design-colors';
+@use 'src/styles/layout-variables';
+@import 'src/styles/flat-design-forms';
 
 .wrapper {
-  background-color: #f44336;
-  box-sizing: border-box;
-  //height: 100%;
-  width: 100vw;
-  min-height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @extend .container;
 
   form {
-    background-color: flat-design-colors.$backgroundColorDefault;
-    display: flex;
-    flex-direction: column;
-    //height: 600px;
-    width: 400px;
-    padding: 20px;
+    @extend .form;
+
+    h1 {
+
+    }
+
+    a {
+
+    }
   }
 }
