--- a/src/pages/Register/Register.module.scss
+++ b/src/pages/Register/Register.module.scss
@@ -1,19 +1,18 @@
 @use 'src/styles/flat-design-colors';
-.wrapper{
-  background-color: #f44336;
-  box-sizing: border-box;
-  //height: 100%;
-  width: 100vw;
-  min-height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  form{
-    background-color: flat-design-colors.$backgroundColorDefault;
-    display: flex;
-    flex-direction: column;
-    //height: 600px;
-    width: 400px;
-    padding: 20px;
+@import 'src/styles/flat-design-forms';
+
+.wrapper {
+  @extend .container;
+
+  form {
+    @extend .form;
+    div{
+      //border: 1px solid;
+      display: flex;
+      justify-content: space-between;
+      padding: 0;
+      margin: 0;
+      width: 100%;
+    }
   }
 }
