--- a/src/features/ui/Layout/Layout.module.scss
+++ b/src/features/ui/Layout/Layout.module.scss
@@ -1,9 +1,13 @@
 @use 'src/styles/layout-variables';
+@use 'src/styles/flat-design-colors';
 
 .page {
-  background-color: #275EFE;
-  height: calc(100vh - #{layout-variables.$headerHeight
+  background-color: flat-design-colors.$mainColor;
+  //background-color: flat-design-colors.$secondaryColor;
+  min-height: calc(100vh - #{layout-variables.$headerHeight
 });
   box-sizing: border-box;
   margin: 0;
+  display: flex;
+  justify-content: center;
 }
