--- a/src/features/ui/flat-design/RangeDoubleSlider.module.scss
+++ b/src/features/ui/flat-design/RangeDoubleSlider.module.scss
@@ -1,10 +1,41 @@
-@import 'src/styles/flat-design-colors';
+@use 'src/styles/flat-design-decorators';
+@use 'src/styles/flat-design-colors';
+@use 'src/styles/layout-variables';
 
-$thumbColor: $checkMarkColor;
-$trackColor: $elementsColorThemeRed;
-$rangeFillColor: $elementsColorDefault;
+
+//component colors interface
+
+//$thumbColor: flat-design-colors.$checkMarkColor;
+$thumbColor: flat-design-colors.$rangeThumbInactive;
+$trackColor: none;
+$rangeFillColor: flat-design-colors.$rangeFill;
+
+//component shape interface
+
+@mixin thumbShape($round: true) {
+  @if $round {
+    border-radius: 50%;
+  } @else {
+    border-radius: layout-variables.$elementsBorderRadius;
+  }
+}
+
+$roundThumb: false;
 
 $trackHeight: 20px;
+
+@mixin trackShape($round: true) {
+  @if $round {
+    border-radius: calc(#{$trackHeight} / 2);
+  } @else {
+    border-radius: layout-variables.$elementsBorderRadius;
+  }
+}
+
+$roundTrack: false;
+
+
+//functionality mixins
 
 @mixin currentValueDisplay {
   content: attr(data-value);
@@ -12,14 +43,13 @@ $trackHeight: 20px;
   font-weight: 600;
   font-size: 16px;
   z-index: 10;
-  top: 15px;
+  top: calc(#{$trackHeight} + 5px);
 }
 
 @mixin input-thumb-override {
   background-color: $thumbColor;
   border: none;
-  border-radius: 50%;
-  //border-radius: 3px;
+  @include thumbShape($roundThumb);
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.3);
   cursor: pointer;
   height: calc(#{$trackHeight} + 8px);
@@ -42,7 +72,7 @@ $trackHeight: 20px;
 
   .rangeRightPart::after {
     @include currentValueDisplay;
-    right: 10px;
+    right: 5px;
   }
 
 
@@ -55,16 +85,12 @@ $trackHeight: 20px;
   .sliderTrack,
   .sliderRange {
     position: absolute;
-    border-radius: calc(#{$trackHeight} / 2);
-    //height: 10px;
+    @include trackShape($roundTrack);
   }
 
   .sliderTrack {
-    //background-color: $trackColor;
-    background: rgba(191, 185, 169, .2);
-    box-shadow: 0 1px 2px rgba(0, 0, 0, .44) inset;
-    -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, .44) inset;
-    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .44) inset;
+    background-color: $trackColor;
+    @include flat-design-decorators.insetShadow;
     height: $trackHeight;
     width: 100%;
     z-index: 1;
@@ -95,18 +121,19 @@ $trackHeight: 20px;
 
   &::-webkit-slider-thumb {
     @include input-thumb-override;
-    &::before{
-      //@include currentValueDisplay;
-      //right: 10px;
-      content: "";
-      position: absolute;
-      width: 10px;
-      height: 10px;
-      background-color: white;
-      bottom: 10px;
-      left: 10px;
-      color: white;
-    }
+
+    //&::before {
+    //  //@include currentValueDisplay;
+    //  //right: 10px;
+    //  content: "";
+    //  position: absolute;
+    //  width: 10px;
+    //  height: 10px;
+    //  background-color: white;
+    //  bottom: 10px;
+    //  left: 10px;
+    //  color: white;
+    //}
   }
 
   &::-moz-range-thumb {
