--- a/src/pages/InstructionsOnPasswordRecovery/InfoOnPasswordRecovery.module.scss
+++ b/src/pages/InstructionsOnPasswordRecovery/InfoOnPasswordRecovery.module.scss
@@ -2,8 +2,8 @@
 @use 'src/styles/layout-variables';
 
 .wrapper {
-  color: flat-design-colors.$textColorMain;
-  background-color: flat-design-colors.$mainColor;
+  color: flat-design-colors.$normalText;
+  background-color: flat-design-colors.$pageBackground;
   box-sizing: border-box;
   //height: 100%;
   font-family: "Josefin Sans", sans-serif;
@@ -15,9 +15,9 @@
   justify-content: center;
   align-items: center;
 
-  div {
-    background-color: flat-design-colors.$secondaryColor;
-    border-bottom: 3px solid flat-design-colors.$elementsBorderColorDefault;
+  & > div {
+    background-color: flat-design-colors.$pageFormsBackground;
+    border-bottom: 3px solid flat-design-colors.$pageFormsBorder;
     border-radius: layout-variables.$elementsBorderRadius;
     display: flex;
     flex-direction: column;
