create basic implementation of login, create reducer and API object

--- a/src/features/ui/Button/ButtonFlatDesign.module.scss
+++ b/src/features/ui/Button/ButtonFlatDesign.module.scss
@@ -3,7 +3,7 @@
 @use 'src/styles/flat-design-colors';
 
 .wrapper {
-  //border: 1px solid;
+  //border: 2px solid magenta;
   display: inline-block;
   position: relative;
   padding: 0;
