--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 
 .app {
     /*border: 3px solid #4CDF78;*/
+    position: relative;
     padding: 0;
     margin: 0;
     min-height: 100vh;
@@ -14,6 +15,7 @@ h1, h2, h3 {
 
 h1 {
     margin-bottom: 40px;
+    font-size: 36px;
 }
 
 h2 {
@@ -36,6 +38,12 @@ a {
 
 a:hover {
     text-shadow: 2px 2px 0 rgba(0, 0, 0, .3);
+}
+
+* {
+    font-family: "Josefin Sans", sans-serif;
+    font-size: 18px;
+    font-weight: 700;
 }
 
 /*a::after {*/
