--- a/src/features/AppMessagesPopup/AppMessagesPopup.module.scss
+++ b/src/features/AppMessagesPopup/AppMessagesPopup.module.scss
@@ -11,9 +11,14 @@
   min-width: 100px;
   height: 100px;
   opacity: 0.9;
+  border-radius: 5px;
+  background-color: flat-design-colors.$messagePopupBackground;
+  border-bottom: 3px solid flat-design-colors.$messagePopupBorder;
 
 }
 
 .error{
   background-color: flat-design-colors.$error;
+  border-bottom: 3px solid flat-design-colors.$errorPopupBorder;
+
 }
