--- a/src/pages/Loader/Loader.module.scss
+++ b/src/pages/Loader/Loader.module.scss
@@ -1,4 +1,12 @@
+@use 'src/styles/flat-design-colors';
+
 .wrapper{
-  height: 100vh;
-  width: 100vw;
+  position: absolute;
+  z-index: 1000;
+  top: calc(100vh - 60%);
+  left: calc(100vw - 60%);
+  height: 100px;
+  width: 300px;
+  text-align: center;
+  background-color: flat-design-colors.$royalBlue;
 }
