--- a/src/features/ui/Checkbox/CheckcoxFlatDesign.module.scss
+++ b/src/features/ui/Checkbox/CheckcoxFlatDesign.module.scss
@@ -1,9 +1,15 @@
-$checkMarkColor: #5E5D58;
+@use 'src/styles/flat-design-colors';
+@use 'src/styles/flat-design-decorators';
+
+
+$checkedBackground: flat-design-colors.$checkboxCheckedBackground;
+$uncheckedBackground: flat-design-colors.$checkboxUncheckedBackground;
+$checkMark: flat-design-colors.$checkboxCheckmark;
 
 @mixin check-mark {
   position: absolute;
   left: 0;
-  background-color: white;
+  background-color: $checkMark;
   border-radius: 2px;
   content: "";
   transform: translateX(10px) rotate(-45deg);
@@ -14,6 +20,7 @@ $checkMarkColor: #5E5D58;
   //border: 1px solid;
   display: flex;
   align-items: flex-end;
+
   input {
     position: relative;
     height: 20px;
@@ -24,13 +31,12 @@ $checkMarkColor: #5E5D58;
     -webkit-appearance: none;
     vertical-align: middle;
     margin-right: 10px;
-    background: $checkMarkColor;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, .44);
-    -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, .44);
-    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .44);
+    background: $uncheckedBackground;
+    @include flat-design-decorators.insetShadow;
 
 
     &:checked {
+      background: $checkedBackground;
       &::before {
         @include check-mark;
         top: 50%;
