--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,4 @@
+@use 'src/styles/flat-design-colors';
 
 .app {
     /*border: 3px solid #4CDF78;*/
@@ -6,7 +7,7 @@
     margin: 0;
     min-height: 100vh;
     box-sizing: border-box;
-    background-color: rgba(59, 119, 180, 0.46);
+    background-color: flat-design-colors.$pageBackground;
 
 }
 
@@ -14,7 +15,7 @@
     font-family: "Josefin Sans", sans-serif;
     font-size: 18px;
     font-weight: 700;
-    color: white;
+    color: flat-design-colors.$normalText;
 }
 
 h1, h2, h3 {
@@ -37,7 +38,7 @@ h3 {
 a {
     text-decoration: none;
     font-weight: 700;
-    color: white;
+    color: flat-design-colors.$notHoveredLink;
     font-family: "Josefin Sans", sans-serif;
     font-size: 18px;
     position: relative;
@@ -45,6 +46,7 @@ a {
 }
 
 a:hover {
+    color: flat-design-colors.$hoveredLink;
     text-shadow: 2px 2px 0 rgba(0, 0, 0, .3);
 }
 
