--- a/src/pages/InstructionsOnPasswordRecovery/InfoOnPasswordRecovery.module.scss
+++ b/src/pages/InstructionsOnPasswordRecovery/InfoOnPasswordRecovery.module.scss
@@ -34,6 +34,10 @@
       text-align: center;
     }
 
+    svg {
+      font-size: 65px;
+    }
+
     a {
       text-align: center;
       font-family: "Josefin Sans", sans-serif;
