--- a/src/features/ui/Button/ButtonFlatDesign.module.scss
+++ b/src/features/ui/Button/ButtonFlatDesign.module.scss
@@ -4,7 +4,8 @@
 
 .wrapper {
   //border: 2px solid magenta;
-  display: inline-block;
+  display: flex;
+  align-items: center;
   position: relative;
   padding: 0;
   margin: 0;
@@ -14,6 +15,8 @@
 }
 
 .button {
+  display: inline-block;
+
   box-sizing: border-box;
   width: 100%;
   border: none;
