--- a/src/pages/Profile/Profile.module.scss
+++ b/src/pages/Profile/Profile.module.scss
@@ -45,8 +45,9 @@
     img{
       position: absolute;
       top: 0;
-      bottom: 0;
-      width: auto;
+      //bottom: 0;
+      width: 100%;
+      height: auto;
     }
 
   }
