use formik for PasswordForgotten form, create API method, and async action for requesting an email with password recovery link, create function returning validation schema object (Yup.object) with fields only received as parameters

--- a/src/features/ui/Button/ButtonFlatDesign.module.scss
+++ b/src/features/ui/Button/ButtonFlatDesign.module.scss
@@ -106,3 +106,12 @@
     background-color: rgb(192, 57, 43);
   }
 }
+
+.wrapper{
+  button {
+    &:disabled{
+      pointer-events: none;
+      background-color: flat-design-colors.$disabledNormalButtonBackground;
+    }
+  }
+}
