--- a/src/features/ui/flat-design/TextInput.module.scss
+++ b/src/features/ui/flat-design/TextInput.module.scss
@@ -8,7 +8,7 @@
   margin: 0;
   box-sizing: border-box;
 
-  *{
+  * {
     box-sizing: border-box;
   }
 
@@ -28,11 +28,15 @@
     //margin: 10px 0 10px 10px;
     box-shadow: 0 0 7px rgba(0, 0, 0, 0.1);
 
+    &:disabled {
+      background-color: flat-design-colors.$disabledTextInputBackground;
+    }
 
     &:focus {
-      box-shadow: 0 0 0px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 0 0 rgba(0, 0, 0, 0.2);
       outline: none;
     }
+
     &::-webkit-input-placeholder {
       position: absolute;
       right: 10px;
