--- a/src/styles/_flat-design-colors.scss
+++ b/src/styles/_flat-design-colors.scss
@@ -94,4 +94,4 @@ $normalTextInputBorder: $blueHorizon;
 $errorTextInputText: $error;
 $errorTextInputBorder: darken($error, 5%);
 $errorTextInputBackground: lighten($error, 20%);
-$disabledTextInputBackground: $blueGrey;
+$disabledTextInputBackground: $innuendo;
