--- a/src/styles/_flat-design-forms.scss
+++ b/src/styles/_flat-design-forms.scss
@@ -20,6 +20,7 @@
   border-radius: layout-variables.$elementsBorderRadius;
   background-color: flat-design-colors.$pageFormsBackground;
   border-bottom: 3px solid flat-design-colors.$pageFormsBorder;
+  color: flat-design-colors.$normalText;
   display: flex;
   flex-direction: column;
   row-gap: 10px;
